--- a/app/src/main/res/layout/activity_main_c.xml
+++ b/app/src/main/res/layout/activity_main_c.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:background="#084B8A">
 
-            <android.support.design.widget.CollapsingToolbarLayout
+            <LinearLayout
                 android:id="@+id/collapsing_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -69,7 +69,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="Blue Fruit Corp"
                                 android:textColor="#ffffff"
-                                android:textSize="24sp" />
+                                android:textSize="18sp" />
 
                             <TextView
                                 android:id="@+id/useremail"
@@ -105,16 +105,16 @@
 
                 </LinearLayout>
 
-            </android.support.design.widget.CollapsingToolbarLayout>
+            </LinearLayout>
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="48dp">
+                android:layout_height="56dp">
 
                 <android.support.design.widget.TabLayout
                     android:id="@+id/tlUserProfileTabs"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="56dp"
                     android:background="#01bcd5"
                     app:tabGravity="fill"
                     app:tabIndicatorColor="#5be5ad"
@@ -147,18 +147,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:layout_width="56dp"
-                android:layout_height="56dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:paddingBottom="10dp"
-                android:paddingTop="10dp"
-                android:clickable="true"
-                android:background="#04B404"
-                app:srcCompat="@android:drawable/ic_dialog_email"
-                android:id="@+id/imageView6" />
-
             <Spinner
                 android:id="@+id/city"
                 android:background="#ffffff"
@@ -171,16 +159,8 @@
                 android:inputType="textEmailAddress"
                 android:textSize="16sp"
                 android:maxLines="1"
-                android:layout_toRightOf="@+id/imageView6"
-                android:layout_toEndOf="@+id/imageView6" />
-
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:paddingTop="10dp"
-            android:layout_height="wrap_content">
+                android:layout_toLeftOf="@+id/imageView6"
+                android:layout_toStartOf="@+id/imageView6" />
 
             <ImageView
                 android:layout_width="56dp"
@@ -189,10 +169,21 @@
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
-                android:background="#04B404"
                 android:clickable="true"
-                app:srcCompat="@android:drawable/ic_lock_idle_lock"
-                android:id="@+id/imageView7" />
+                android:background="#04B404"
+                android:src="@drawable/ic_action_hardware_keyboard_arrow_down"
+                android:id="@+id/imageView6"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:paddingTop="10dp"
+            android:layout_height="wrap_content">
 
             <Spinner
                 android:id="@+id/material"
@@ -204,8 +195,23 @@
                 android:layout_width="match_parent"
                 android:textSize="16sp"
                 android:layout_height="56dp"
-                android:layout_toRightOf="@+id/imageView7"
-                android:layout_toEndOf="@+id/imageView7" />
+                android:layout_toLeftOf="@+id/imageView7"
+                android:layout_toStartOf="@+id/imageView7" />
+
+            <ImageView
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:background="#04B404"
+                android:clickable="true"
+                android:src="@drawable/ic_action_hardware_keyboard_arrow_down"
+                android:id="@+id/imageView7"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
 
 
         </RelativeLayout>
