--- a/app/src/main/res/layout/activity_list_corp.xml
+++ b/app/src/main/res/layout/activity_list_corp.xml
@@ -65,13 +65,15 @@
                             android:orientation="vertical">
 
                             <TextView
+                                android:id="@id/username"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="John Smith"
                                 android:textColor="#ffffff"
-                                android:textSize="24sp" />
+                                android:textSize="18sp" />
 
                             <TextView
+                                android:id="@+id/useremail"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="\@jsmith"
@@ -79,6 +81,7 @@
                                 android:textSize="12sp" />
 
                             <TextView
+                                android:id="@+id/userphone"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="Mobile development passionate."
@@ -107,7 +110,7 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="48dp">
+                android:layout_height="56dp">
 
                 <android.support.design.widget.TabLayout
                     android:id="@+id/tlUserProfileTabs"
@@ -149,7 +152,7 @@
                 android:orientation="vertical" />
         </ScrollView>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -161,12 +164,14 @@
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
-                android:layout_width="283dp"
+                android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:hint="Blue Fruit Corp \n 0500-4533456"
                 android:inputType="textEmailAddress"
                 android:textSize="16sp"
-                android:maxLines="2" />
+                android:maxLines="2"
+                android:layout_toLeftOf="@+id/imageView6"
+                android:layout_toStartOf="@+id/imageView6" />
 
             <ImageView
                 android:layout_width="56dp"
@@ -177,13 +182,16 @@
                 android:paddingTop="10dp"
                 android:clickable="true"
                 android:background="#04B404"
-                app:srcCompat="@android:drawable/ic_dialog_email"
-                android:id="@+id/imageView6" />
+                android:src="@drawable/ic_action_content_add"
+                android:id="@+id/imageView6"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
 
 
-        </LinearLayout>
+        </RelativeLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:paddingTop="10dp"
             android:orientation="horizontal"
@@ -196,13 +204,13 @@
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
-                android:layout_width="282dp"
+                android:layout_width="match_parent"
                 android:textSize="16sp"
                 android:layout_height="56dp"
                 android:hint="Blue Fruit Corp \n 0500-4533456"
                 android:maxLines="2"
-                android:layout_toRightOf="@+id/imageView7"
-                android:layout_toEndOf="@+id/imageView7" />
+                android:layout_toLeftOf="@+id/imageView7"
+                android:layout_toStartOf="@+id/imageView7" />
 
             <ImageView
                 android:layout_width="56dp"
@@ -213,15 +221,19 @@
                 android:paddingTop="10dp"
                 android:clickable="true"
                 android:background="#04B404"
-                app:srcCompat="@android:drawable/ic_lock_idle_lock"
-                android:id="@+id/imageView7" />
-        </LinearLayout>
+                android:src="@drawable/ic_action_content_add"
+                android:id="@+id/imageView7"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+        </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:paddingTop="10dp"
             android:orientation="horizontal"
             android:layout_height="wrap_content">
+
 
             <TextView
                 android:id="@+id/corp3"
@@ -230,13 +242,14 @@
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
-                android:layout_width="282dp"
+                android:layout_width="match_parent"
                 android:textSize="16sp"
                 android:layout_height="56dp"
                 android:hint="Blue Fruit Corp \n 0500-4533456"
                 android:maxLines="2"
-                android:layout_toRightOf="@+id/imageView7"
-                android:layout_toEndOf="@+id/imageView7" />
+                android:layout_alignParentTop="true"
+                android:layout_toLeftOf="@+id/imageView71"
+                android:layout_toStartOf="@+id/imageView71" />
 
             <ImageView
                 android:layout_width="56dp"
@@ -247,10 +260,13 @@
                 android:paddingTop="10dp"
                 android:background="#04B404"
                 android:clickable="true"
-                app:srcCompat="@android:drawable/ic_lock_idle_lock"
-                android:id="@+id/imageView71" />
+                android:src="@drawable/ic_action_content_add"
+                android:id="@+id/imageView71"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
