--- a/app/src/main/res/layout/activity_request.xml
+++ b/app/src/main/res/layout/activity_request.xml
@@ -101,28 +101,99 @@
 
                         </LinearLayout>
                     </LinearLayout>
-
-
-
                 </LinearLayout>
 
             </android.support.design.widget.CollapsingToolbarLayout>
 
-            <FrameLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="48dp">
+                android:layout_height="56dp"
+                android:background="#01bcd5"
+                android:orientation="horizontal">
 
-                <android.support.design.widget.TabLayout
-                    android:id="@+id/tlUserProfileTabs"
-                    android:layout_width="match_parent"
+                <RelativeLayout
+                    android:layout_width="112dp"
+                    android:layout_height="56dp">
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="56dp"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:paddingBottom="10dp"
+                        android:paddingTop="10dp"
+                        android:background="#01bcd5"
+                        android:src="@drawable/recycle"
+                        android:id="@+id/imageView" />
+
+                    <TextView
+                        android:layout_width="46dp"
+                        android:layout_height="56dp"
+                        android:text="1024"
+                        android:gravity="center"
+                        android:textColor="#ffffff"
+                        android:id="@+id/textView2"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@+id/imageView"
+                        android:layout_toEndOf="@+id/imageView" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="112dp"
                     android:layout_height="56dp"
-                    android:background="#01bcd5"
-                    app:tabGravity="fill"
-                    app:tabIndicatorColor="#5be5ad"
-                    app:tabIndicatorHeight="4dp"
-                    app:tabMode="fixed" />
+                    android:layout_gravity="center">
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="56dp"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:paddingBottom="10dp"
+                        android:paddingTop="10dp"
+                        android:background="#01bcd5"
+                        android:src="@drawable/forest"
+                        android:id="@+id/imageView13" />
 
-            </FrameLayout>
+                    <TextView
+                        android:layout_width="46dp"
+                        android:layout_height="56dp"
+                        android:text="223"
+                        android:gravity="center"
+                        android:textColor="#ffffff"
+                        android:id="@+id/textView5"
+                        android:layout_alignParentTop="true"
+                        android:layout_toRightOf="@+id/imageView13"
+                        android:layout_toEndOf="@+id/imageView13" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="112dp"
+                    android:layout_height="56dp">
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="56dp"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:paddingBottom="10dp"
+                        android:paddingTop="10dp"
+                        android:background="#01bcd5"
+                        android:src="@drawable/whale"
+                        android:id="@+id/imageView12" />
+
+                    <TextView
+                        android:layout_width="46dp"
+                        android:layout_height="56dp"
+                        android:text="142"
+                        android:gravity="center"
+                        android:textColor="#ffffff"
+                        android:id="@+id/textView6"
+                        android:layout_alignParentTop="true"
+                        android:layout_toRightOf="@+id/imageView12"
+                        android:layout_toEndOf="@+id/imageView12" />
+
+                </RelativeLayout>
+
+            </LinearLayout>
+
 
         </android.support.design.widget.AppBarLayout>
 
